--- a/data/plugins/LuckPerms/config.yml
+++ b/data/plugins/LuckPerms/config.yml
@@ -607,7 +607,7 @@ group-weight:
 # - When set to 'false', all players will be de-opped, and the /op and /deop commands will be
 #   disabled. Note that vanilla features like the spawn-protection require an operator on the
 #   server to work.
-enable-ops: true
+enable-ops: false
 
 # Enables or disables a special permission based system in LuckPerms for controlling OP status.
 #
@@ -689,7 +689,8 @@ debug-logins: false
 #
 # - Note that due to the design of the storage implementation, usernames must still be 16 characters
 #   or less.
-allow-invalid-usernames: false
+# - Enable if using GeyserMC/Floodgate.
+allow-invalid-usernames: true
 
 # If LuckPerms should not require users to confirm bulkupdate operations.
 #
