--- a/data/plugins/LuckPerms/yaml-storage/groups/default.yml
+++ b/data/plugins/LuckPerms/yaml-storage/groups/default.yml
@@ -1,6 +1,7 @@
 name: default
 permissions:
-- tokenmanager.use.*
+- '*':
+    value: false
 - coreprotect.co
 - essentials.afk
 - essentials.balance
