--- a/data/plugins/LuckPerms/yaml-storage/groups/jokyu.yml
+++ b/data/plugins/LuckPerms/yaml-storage/groups/jokyu.yml
@@ -1,6 +1,9 @@
-name: jyokyu
+name: jokyu
 permissions:
 - essentials.fly
 - weight.400
 parents:
 - chukyu
+prefixes:
+- '&3上級者&f ':
+    priority: 300
