--- a/compose.yaml
+++ b/compose.yaml
@@ -1,5 +1,5 @@
 services:
-  paper:
+  purpur:
     image: itzg/minecraft-server:java23
     restart: unless-stopped
     tty: true
@@ -12,7 +12,7 @@ services:
       VERSION: 1.20.1
       MEMORY: 2560M
       MAX_PLAYERS: 70
-      MOTD: Oyasai Server
+      MOTD:                       \u00A72\u00A7lおやさい鯖
       ICON: https://avatars.githubusercontent.com/u/70241145
       OVERRIDE_ICON: true
       USE_AIKAR_FLAGS: true
