--- a/compose.yaml
+++ b/compose.yaml
@@ -4,6 +4,10 @@ services:
     restart: unless-stopped
     tty: true
     stdin_open: true
+    env_file:
+      - .env
+    volumes:
+      - ./data:/data
     ports:
       - "25565:25565"
     environment:
@@ -12,7 +16,7 @@ services:
       VERSION: 1.20.1
       MEMORY: 2560M
       MAX_PLAYERS: 70
-      MOTD:                       \u00A72\u00A7lおやさい鯖
+      MOTD: \u00A72\u00A7lおやさい鯖
       ICON: https://avatars.githubusercontent.com/u/70241145
       OVERRIDE_ICON: true
       USE_AIKAR_FLAGS: true
@@ -39,5 +43,3 @@ services:
       LOG_TIMESTAMP: true
       # Plugins
       PLUGINS_FILE: /data/plugins.txt
-    volumes:
-      - ./data:/data
